/**
 *  启动命令  protoc --go_out=plugins=grpc:../../ peer.proto
 */

syntax = "proto3";

option go_package = "zry-raft/proto";

package server;


/**
 * @Description: peer节点的请求以及服务
 * @author zhangruiyuan
 * @date 2021/1/15 9:04 下午
 */
service Peer {

  /**
   * @Description: 向其他peer节点发送投票请求
   * @author zhangruiyuan
   * @date 2021/1/15 9:04 下午
   */
  rpc SendVoteRequest (VoteRequest) returns (VoteReply) {}

  /**
   * @Description: 追加日志信息，心跳信息
   * @author zhangruiyuan
   * @date 2021/2/18 11:41 下午
   */
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesReply){}

  /**
   * @Description: 向leader节点追加日志信息
   * @author zhangruiyuan
   * @date 2021/2/18 11:45 下午
   */
  rpc PushMessage (PushMessageRequest) returns(PushMessageReply){}
}


/**
 * @Description: 投票请求的参数
 * @author zhangruiyuan
 * @date 2021/1/15 9:05 下午
 */
message VoteRequest {
  int64 Term = 1;
  int64 LastLogIndex = 2;
  int64 LastLogTerm = 3;
  string CandidateName = 4;
}

/**
 * @Description: 请求投票相应的参数
 * @author zhangruiyuan
 * @date 2021/1/15 9:05 下午
 */
message VoteReply {
  int64 Term = 1;
  int64 VoteGranted = 2;
  string connString = 3;
}


/**
 * @Description: 向一个peer节点请求时需要发送的信息
 * @author zhangruiyuan
 * @date 2021/1/16 12:55 下午
 */
message AppendEntriesRequest {
  // 当前的任期
  int64  Term = 1;
  // 上一个日志索引
  int64  PrevLogIndex = 2;
  // 上一个日志的任期
  int64  PrevLogTerm = 3;
  // 提交索引
  int64  CommitIndex = 4;
  // 当前节点的名称
  string  LeaderName = 5;
  // 需要追加的数据
  string  Massages = 6;
}


/**
 * @Description: 向一个peer节点请求时发送的信息
 * @author zhangruiyuan
 * @date 2021/1/16 12:55 下午
 */
message AppendEntriesReply {
  // 当前的任期
  int64  Term = 1;
  // 自己当前节点的上一个日志索引信息
  int64  PrevLogIndex = 2;
  // 当前节点的名称
  string PeerName = 3;
}


/**
 * @Description: 区块链的交易定义
 * @author zhangruiyuan
 * @date 2021/3/14 6:47 下午
 */
message TransactionDefine{
  // hash
  string key=1;
  // 交易参数
  bytes data=2;
  // 交易的提交者
  string committer=3;
  // 交易的时间
  string time=4;
  // 交易的签名
  string signature=5;
  // 交易的类型
  int32 type=6;
  // 通道的编号
  string channelid=7;
}

/**
 * @Description: 向leader节点追加message信息
 * @author zhangruiyuan
 * @date 2021/2/18 11:46 下午
 */
message PushMessageRequest{
  // 发起交易的用户名字
  string CommitName = 1;
  // 交易内容（日志）
  string Data = 2;
  // 具体交易内容
  TransactionDefine Transaction = 3;
}

/**
 * @Description: 向leader节点追加message信息的返回值
 * @author zhangruiyuan
 * @date 2021/2/18 11:55 下午
 */
message PushMessageReply{
  // 日志的编号信息
  int64 Index = 1;
  // leader的名称
  string LeaderName = 2;
  // leader所在的任期
  int64 Term =3;
  // 创建时间
  string CommitTime = 4;
  // 添加信息的状态，一般直接为enum.success
  int64 Status = 5;
}